--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.etolmach</groupId>
     <artifactId>pojo-mapper</artifactId>
-    <version>1.3</version>
+    <version>1.1.0</version>
     <name>pojo-mapper</name>
     <packaging>jar</packaging>
 
@@ -25,7 +25,6 @@
             <artifactId>commons-jxpath</artifactId>
             <version>1.3</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -33,11 +32,12 @@
             <version>2.10.0</version>
             <scope>test</scope>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
